Add option to allow long-pressing the back button to kill the foreground app [Frameworks part]

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4886,4 +4886,7 @@
 
     <!-- Zen mode condition: no exit criteria. [CHAR LIMIT=NONE] -->
     <string name="zen_mode_forever">Indefinitely</string>
+
+    <!-- Back button long-press kill -->
+    <string name="app_killed_message">Application killed</string>
 </resources>
